--- a/style.css
+++ b/style.css
@@ -58,3 +58,24 @@ body{
     height: 53%;
     font-size: 3em;
 }
+
+#googleMap {
+    width: 35%;
+    height: 400px;
+    display: inline-block;
+}
+
+#movielist {
+    width: 63%;
+    background-color: black;
+    display: inline-block;
+}
+
+.go_back_button_container{
+    float: left;
+}
+
+#go_back_button{
+    width: 5em;
+    height: 3em;
+}
