--- a/page2.css
+++ b/page2.css
@@ -1,3 +1,18 @@
+.main_container {
+    height: 100vh;
+}
+
+.upper_area {
+    border: 1px solid black;
+    display: flex;
+    height: 43%
+}
+
+.bottom_area {
+    height: 50%;
+    border: 1px dotted red;
+}
+
 #googleMap {
     width: 35%;
     height: 400px;
@@ -6,6 +21,33 @@
 
 #movielist {
     width: 63%;
-    background-color: black;
-    display: inline-block;
+    background-color: lightcoral;
+    /* display: inline-block; */
+}
+
+#trailerModal {
+    display: none;
+}
+
+.modal-body {
+    text-align: center;
+}
+
+.bottom_area {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.bottom_area>div {
+    height: 55%;
+    width: 14%;
+}
+
+.bottom_area>div>h3 {
+    text-align: center;
+}
+
+img {
+    height: 100%;
+    width: 100%;
 }
