sort of fixed css

--- a/page2.css
+++ b/page2.css
@@ -10,18 +10,18 @@
 
 .bottom_area {
     height: 50%;
-    border: 1px dotted red;
+    /* border: 1px dotted red; */
 }
 
 #googleMap {
-    width: 35%;
-    height: 400px;
-    display: inline-block;
+    display: flex;
+    /* width: 35%; */
+    height: 100%;
+
 }
 
 #movielist {
-    width: 63%;
-
+    /* width: 63%; */
     background-color: lightcoral;
     /* display: inline-block; */
 }
@@ -44,7 +44,7 @@
     width: 14%;
 }
 
-.bottom_area>div>h3 {
+.bottom_area > div > h4 {
     text-align: center;
 }
 
@@ -54,91 +54,81 @@ img {
 }
 
 #map {
-    width: 400px;
-    height: 500px;
+    height: 100%;
+    width: 50%;
+    /* left: 65%; */
 }
 
-    /* background-color: black;
-    display: inline-block; */
+/* Optional: Makes the sample page fill the window. */
 
+#description {
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+}
 
- /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-       #map {
-        height: 400px;
-        width:500px;
-        left: 65%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      
-      #description {
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-      }
+#infowindow-content .title {
+    font-weight: bold;
+}
 
-      #infowindow-content .title {
-        font-weight: bold;
-      }
+#infowindow-content {
+    display: none;
+}
 
-      #infowindow-content {
-        display: none;
-      }
+#map #infowindow-content {
+    display: inline;
+}
 
-      #map #infowindow-content {
-        display: inline;
-      }
+.pac-card {
+    margin: 10px 10px 0 0;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    font-family: Roboto;
+}
 
-      .pac-card {
-        margin: 10px 10px 0 0;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-        background-color: #fff;
-        font-family: Roboto;
-      }
+#pac-container {
+    padding-bottom: 12px;
+    margin-right: 12px;
+}
 
-      #pac-container {
-        padding-bottom: 12px;
-        margin-right: 12px;
-      }
+.pac-controls {
+    display: inline-block;
+    padding: 5px 11px;
+}
 
-      .pac-controls {
-        display: inline-block;
-        padding: 5px 11px;
-      }
+.pac-controls label {
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 300;
+}
 
-      .pac-controls label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
+#pac-input {
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 400px;
+}
 
-      #pac-input {
-        background-color: #fff;
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        margin-left: 12px;
-        padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-        width: 400px;
-      }
+#pac-input:focus {
+    border-color: #4d90fe;
+}
 
-      #pac-input:focus {
-        border-color: #4d90fe;
-      }
+#title {
+    color: #fff;
+    background-color: #4d90fe;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 6px 12px;
+}
 
-      #title {
-        color: #fff;
-        background-color: #4d90fe;
-        font-size: 25px;
-        font-weight: 500;
-        padding: 6px 12px;
-      }
-      #target {
-        width: 345px;
-      }
-
+#target {
+    width: 345px;
+}
