--- a/page2.css
+++ b/page2.css
@@ -21,6 +21,8 @@
 }
 
 #movielist {
+    display: flex;
+    flex-wrap: wrap;
     width: 63%;
     background-color: lightcoral;
     /* display: inline-block; */
