--- a/restructured.css
+++ b/restructured.css
@@ -28,10 +28,14 @@ body{
     z-index: 1;
 }
 
-#modal-content-id{
-    width: 90%;
-    height: 90%;
+#modal-content-id {
+    width: 60%;
+    height: 85%;
     margin: 0 auto;
+}
+
+.modal-header{
+    padding: 2%;
 }
 /*MODAL CSS ENDS HERE*/
 
@@ -46,15 +50,52 @@ body{
 .carousel .item img{
     margin: 0 auto; /* Align slide image horizontally center */
 }
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .bs-example{
     margin: 20px;
 }
-/*CAROUSEL CSS ENDS HERE*/
+
+.item{
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    height: 100%;
+}
 
 img {
-    width: 15%;
-    height: 15%;
+    height: 85%;
+    padding-top: 2%;
 }
+
+.item > div{
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    height: 100%;
+}
+
+
+#posterCarousel{
+    width: 50vw;
+    height: 30vh;
+    margin: 0 auto;
+}
+
+#foodCarousel{
+    width: 50vw;
+    height: 30vh;
+    margin: 0 auto;
+    top: 5vh;
+}
+/*CAROUSEL CSS ENDS HERE*/
+
 
 
 
